spacing fix for trancluded cards
git-svn-id: svn+ssh://rubyforge.org/var/svn/wagn/trunk@482 ec9d8473-2c57-4e18-8d51-132f0e30f32e

--- a/public/stylesheets/card.css
+++ b/public/stylesheets/card.css
@@ -330,7 +330,7 @@ a.current, a:link.current {
   color: #444;
 }
 .card-slot .content,
-.card-slot .transcluded .content .card-slot .content,
+.card-slot .transcluded .content .card-slot.paragraph,
 .card-slot .revision { 
   display: block;
   padding: 0px 10px 10px 10px;
